--- a/app/src/main/res/layout/activity_order_detail_activty.xml
+++ b/app/src/main/res/layout/activity_order_detail_activty.xml
@@ -13,8 +13,8 @@
         layout="@layout/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" />
 
     <ScrollView
@@ -34,10 +34,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_7sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:elevation="1dp"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="1dp"
@@ -275,9 +275,9 @@
                 android:id="@+id/cardVendor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:elevation="1dp"
                 android:visibility="visible"
                 app:cardCornerRadius="3dp"
@@ -367,9 +367,9 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:elevation="1dp"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="1dp">
@@ -679,10 +679,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_1sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:elevation="1dp"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="1dp">
@@ -721,10 +721,10 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_marginRight="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
+                            android:layout_marginRight="@dimen/_5sdp"
+                            android:layout_marginBottom="@dimen/_5sdp"
                             android:orientation="horizontal"
                             android:weightSum="1">
 
@@ -971,6 +971,16 @@
                     </LinearLayout>
 
 
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        android:id="@+id/tvRemark"
+                        style="@style/TextAppearance.AppCompat.Subhead"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/_5sdp"
+                        android:text=""
+                        android:textColor="@color/colorPrimary"
+                        app:edittextfont="@string/raleway_regular" />
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -979,10 +989,10 @@
                 android:id="@+id/cardDelivery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_1sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:elevation="1dp"
                 android:visibility="gone"
                 app:cardCornerRadius="3dp"
@@ -1190,10 +1200,10 @@
                 android:id="@+id/cardTakeout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_1sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:elevation="1dp"
                 android:visibility="gone"
                 app:cardCornerRadius="3dp"
